mock-data/large-cluster/k8s/networking.k8s.io:NetworkPolicy/test-ingress-isolated-ns-01-default-deny-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: default-deny-ingress
    namespace: test-ingress-isolated-ns-01
    selfLink: >-
        /apis/networking.k8s.io/v1/namespaces/test-ingress-isolated-ns-01/networkpolicies/default-deny-ingress
    uid: d4a152db-3d20-4391-918c-2a1895e85b39
    resourceVersion: '140056265'
    generation: 1
    creationTimestamp: '2020-11-25T08:49:52Z'
    annotations:
        kubectl.kubernetes.io/last-applied-configuration: >
            {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"test-ingress-isolated-ns-01"},"spec":{"podSelector":{"matchLabels":{}},"policyTypes":["Ingress"]}}
spec:
    podSelector: {}
    policyTypes:
        - Ingress
