mock-data/large-cluster/k8s/networking.k8s.io:NetworkPolicy/test-webapp-backend-default-deny-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: default-deny-ingress
    namespace: test-webapp-backend
    selfLink: >-
        /apis/networking.k8s.io/v1/namespaces/test-webapp-backend/networkpolicies/default-deny-ingress
    uid: 7ffdb63b-9dc2-4bee-91ea-031477f0a77c
    resourceVersion: '140041914'
    generation: 1
    creationTimestamp: '2020-11-25T08:06:57Z'
    annotations:
        kubectl.kubernetes.io/last-applied-configuration: >
            {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"test-webapp-backend"},"spec":{"podSelector":{"matchLabels":{}},"policyTypes":["Ingress"]}}
spec:
    podSelector: {}
    policyTypes:
        - Ingress
