mock-data/large-cluster/k8s/networking.k8s.io:NetworkPolicy/test-webapp-backend-logger-ingress-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: logger-ingress-allow
    namespace: test-webapp-backend
    selfLink: >-
        /apis/networking.k8s.io/v1/namespaces/test-webapp-backend/networkpolicies/logger-ingress-allow
    uid: c33509b9-45d7-42f1-8eeb-6c97f400c7e3
    resourceVersion: '140041927'
    generation: 1
    creationTimestamp: '2020-11-25T08:06:58Z'
    annotations:
        kubectl.kubernetes.io/last-applied-configuration: >
            {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"logger-ingress-allow","namespace":"test-webapp-backend"},"spec":{"ingress":[{"from":[{"podSelector":{"matchLabels":{}}}]}],"podSelector":{"matchLabels":{"app":"logger"}},"policyTypes":["Ingress"]}}
spec:
    podSelector:
        matchLabels:
            app: logger
    ingress:
        -
            from:
                -
                    podSelector: {}
    policyTypes:
        - Ingress
