mock-data/large-cluster/k8s/networking.k8s.io:NetworkPolicy/test-webapp-frontend-default-deny-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: default-deny-ingress
    namespace: test-webapp-frontend
    selfLink: >-
        /apis/networking.k8s.io/v1/namespaces/test-webapp-frontend/networkpolicies/default-deny-ingress
    uid: fa8aec7e-4bcc-48e4-9a31-3a2cd40b319f
    resourceVersion: '140041916'
    generation: 1
    creationTimestamp: '2020-11-25T08:06:57Z'
    annotations:
        kubectl.kubernetes.io/last-applied-configuration: >
            {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-deny-ingress","namespace":"test-webapp-frontend"},"spec":{"podSelector":{"matchLabels":{}},"policyTypes":["Ingress"]}}
spec:
    podSelector: {}
    policyTypes:
        - Ingress
