mock-data/large-cluster/k8s/networking.k8s.io:NetworkPolicy/test-webapp-frontend-frontend-ingress-allow.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: frontend-ingress-allow
    namespace: test-webapp-frontend
    selfLink: >-
        /apis/networking.k8s.io/v1/namespaces/test-webapp-frontend/networkpolicies/frontend-ingress-allow
    uid: f371e3a0-8d46-4133-919b-6f8aaafa0ff4
    resourceVersion: '140041932'
    generation: 1
    creationTimestamp: '2020-11-25T08:06:58Z'
    annotations:
        kubectl.kubernetes.io/last-applied-configuration: >
            {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"frontend-ingress-allow","namespace":"test-webapp-frontend"},"spec":{"ingress":[{"from":[{"ipBlock":{"cidr":"192.168.1.1/24","except":["192.168.1.1/29","192.168.1.1/30"]}}]}],"podSelector":{"matchLabels":{"app":"frontend"}},"policyTypes":["Ingress"]}}
spec:
    podSelector:
        matchLabels:
            app: frontend
    ingress:
        -
            from:
                -
                    ipBlock:
                        cidr: 192.168.1.1/24
                        except:
                            - 192.168.1.1/29
                            - 192.168.1.1/30
    policyTypes:
        - Ingress
